--- a/daml.yaml
+++ b/daml.yaml
@@ -12,4 +12,5 @@ codegen:
     output-directory: ui/daml.js
     npm-scope: daml.js
 # Remove this line when running against a ledger without user management.
-init-script: Setup:setup
+init-script: Task:testTask
+
